// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
        SvgPencil
      </span>
    </span>
    <BasicTextAreaStyle
      aria-required={false}
-     autoComplete="off"
+     autoComplete="on"
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -17,9 +17,9 @@
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      rows={5}
-     spellCheck={true}
+     spellCheck={false}
      value="baz"
    />
  </FakeInputStyle>
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,10 +12,12 @@
    </span>
    <BasicTextAreaStyle
      aria-required={false}
      autoComplete="off"
      id="bar"
+     maxLength="450"
+     minLength="25"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      rows={5}
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,17 +9,17 @@
      >
        SvgPencil
      </span>
    </span>
    <BasicTextAreaStyle
-     aria-required={true}
+     aria-required={false}
      autoComplete="off"
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      rows={5}
      spellCheck={true}
      value="baz"
    />
  </FakeInputStyle>
`;
